fix(scss): add overflow touch for ios

--- a/source/template/scss/global.scss
+++ b/source/template/scss/global.scss
@@ -35,6 +35,7 @@ html, body
     left: 0;
     right: 0;
     bottom: 0;
-    overflow: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     padding-top: 31px;
 }
